--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "quran_server"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.1.5"
+djangorestframework = "^3.14.0"
 
 
 [build-system]
