--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,14 @@ packages = [{include = "quran_server"}]
 python = "^3.10"
 Django = "^4.1.5"
 djangorestframework = "^3.14.0"
+django-environ = "^0.9.0"
+xhtml2pdf = "^0.2.8"
+django-treebeard = "^4.6.0"
+psycopg2 = "^2.9.3"
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^2.20.0"
+black = "^22.8.0"
 
 [build-system]
 requires = ["poetry-core"]
