--- a/.env.dist
+++ b/.env.dist
@@ -3,3 +3,5 @@ DJANGO_SECRET_KEY="1"
 
 # SECURITY WARNING: don't run with the debug turned on in production!
 DJANGO_DEBUG=True
+
+DJANGO_ALLOWED_HOSTS="127.0.0.1","localhost"
