--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ xhtml2pdf = "^0.2.8"
 django-treebeard = "^4.6.0"
 psycopg2 = "^2.9.3"
 django-modeltranslation = "^0.18.7"
+django-htmx = "^1.13.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
