--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,7 +12,7 @@ repos:
       - id: check-case-conflict
       - id: check-added-large-files
       - id: no-commit-to-branch
-        args: [--branch, main]
+        args: [--branch, master]
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.3.1
     hooks:
