--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ django-treebeard = "^4.6.0"
 psycopg2 = "^2.9.3"
 django-modeltranslation = "^0.18.7"
 django-htmx = "^1.13.0"
+django-extensions = "^3.2.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
