--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ psycopg2 = "^2.9.3"
 django-modeltranslation = "^0.18.7"
 django-htmx = "^1.13.0"
 django-extensions = "^3.2.1"
+django-widget-tweaks = "^1.4.12"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
