Excluded `dquran/fixtures` in the distribution of the package
by inputting them in the `exclude` section of `pyproject.toml`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [
     { include = "dquran" },
     { include = "duser" },
 ]
+exclude = ["dquran/fixtures"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
