--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ django-widget-tweaks = "^1.4.12"
 pre-commit = "^2.20.0"
 black = "^22.8.0"
 
+[tool.poetry.scripts]
+bless-server-manage = "manage:main"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
