--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ exclude = ["dquran/fixtures"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+bismillah-on-py = "1.0.1"
 Django = "~4.1.5"
 djangorestframework = "^3.14.0"
 django-environ = "^0.9.0"
